<resources>
    <string name="app_name">Coach Nutrition</string>
    <string name="authority">paris7.appduturfu.calorieprovider</string>
    <string name="welcome">Your daily calories</string>
    <string name="nocalorie">0</string>
    <string name="meal">Add meal</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="dailyGoal">Daily goal</string>
    <string name="addFood">Add food</string>
    <string name="importCSV">Import CSV</string>
    <string name="uploadCSV">Upload CSV</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="resetHistory">Reset history</string>
    <string name="selectDate">Choose a date</string>
    <string name="dailyGoalInfo">Set your daily goals of calories</string>
    <string name="minDaily">Min daily calories</string>
    <string name="maxDaily">Max daily calories</string>
    <string name="chooseFood">Choose your meal</string>
    <string name="quantity">Quantity</string>
    <string name="totalCalorie">Total calories:</string>
    <string name="selectFile">Select your .csv file</string>
    <string name="search">Search</string>
    <string name="load">Load</string>
    <string name="deleteDatabase">Delete Database</string>
</resources>
