<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".AllSettings">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/dailyGoal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorButton"
                android:fontFamily="casual"
                android:onClick="onClickDailyGoal"
                android:text="@string/dailyGoal"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpace"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/addFood"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorButton"
                android:fontFamily="casual"
                android:onClick="onClickAddFood"
                android:text="@string/addFood"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpace"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/importCSV"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorButton"
                android:fontFamily="casual"
                android:onClick="onClickImportCSV"
                android:text="@string/importCSV"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpace"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/uploadCSV"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorButton"
                android:fontFamily="casual"
                android:onClick="onClickUploadCSV"
                android:text="@string/uploadCSV"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpace"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/deleteDabase"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorButton"
                android:fontFamily="casual"
                android:onClick="onClickDeleteDatabase"
                android:text="@string/deleteDatabase"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />
                        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpace"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/deleteHistory"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/colorButton"
                android:fontFamily="casual"
                android:onClick="onClickDeleteHistory"
                android:text="@string/resetHistory"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>