<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="com.oc.rss.coach_nutrition_project.settings">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.11"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/dailyGoalInfo"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/minDaily" />

        <EditText
            android:id="@+id/ed_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="numberSigned"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/maxDaily" />

        <EditText
            android:id="@+id/ed_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:fontFamily="casual"
            android:inputType="numberSigned"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:backgroundTint="@color/colorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/cancel"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:layout_weight="1"
            android:onClick="buttonCancel"
            android:textStyle="bold" />

        <Button
            android:id="@+id/b_ok"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:backgroundTint="@color/colorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/ok"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:onClick="buttonOk"
            android:layout_weight="1"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
