<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_afficher_livres"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oc.rss.coach_nutrition_project.show_food_db"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:weightSum="1">

        <include
            android:id="@+id/toolBar"
            layout="@layout/toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/chooseFood"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
             android:layout_weight="0.94">

             <ListView
                 android:id="@+id/list"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:layout_centerHorizontal="true" />

         </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
             android:weightSum="1">

         </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
             android:weightSum="1">

             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="100dp"
                 android:layout_height="53dp"
                 android:fontFamily="casual"
                 android:gravity="center"
                 android:text="@string/quantity"
                 android:textColor="@android:color/background_light"
                 android:textSize="18sp"
                 android:textStyle="bold" />

             <EditText
                 android:id="@+id/quantity"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorButton"
                 android:ems="10"
                 android:fontFamily="casual"
                 android:inputType="numberDecimal"
                 android:textColor="@android:color/background_light" />

             <Button
                 android:id="@+id/add"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorButton"
                 android:fontFamily="casual"
                 android:onClick="addFoodToHistory"
                 android:text="@string/add"
                 android:textColor="@android:color/background_light"
                 android:textSize="18sp"
                 android:textStyle="bold" />

         </LinearLayout>

         <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpace"
                android:orientation="horizontal"></LinearLayout>

         <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:orientation="horizontal"></LinearLayout>
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
             android:weightSum="1">

             <TextView
                 android:id="@+id/textView4"
                 android:layout_width="200dp"
                 android:layout_height="53dp"
                 android:fontFamily="casual"
                 android:gravity="center"
                 android:text="@string/totalCalorie"
                 android:textColor="@android:color/background_light"
                 android:textSize="24sp"
                 android:textStyle="bold" />

             <TextView
                 android:id="@+id/calories"
                 android:layout_width="100dp"
                 android:layout_height="53dp"
                 android:fontFamily="casual"
                 android:gravity="center"
                 android:text="@string/nocalorie"
                 android:textColor="@android:color/background_light"
                 android:textSize="24sp"
                 android:textStyle="bold" />
         </LinearLayout>

    </LinearLayout>

</RelativeLayout>
