<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.oc.rss.coach_nutrition_project.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:weightSum="1">

    <include
        android:id="@+id/toolBar"
        layout="@layout/toolbar"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.01">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textSize="30sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/nocalorie"
        android:textAllCaps="true"
        android:textColor="@android:color/background_light"
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="31dp"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/meal"
                style="@android:style/Widget.DeviceDefault.ImageButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/colorButton"
                android:scaleType="fitXY"
                android:onClick="onClickMeal"
                app:srcCompat="@drawable/ic_restaurant_menu_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpace"
                android:orientation="vertical"></LinearLayout>

            <ImageButton
                android:id="@+id/stats"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/colorButton"
                android:scaleType="fitXY"
                android:onClick="onClickHistory"
                app:srcCompat="@drawable/ic_insert_chart_black_24dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpace"
                android:orientation="vertical"></LinearLayout>

            <ImageButton
                android:id="@+id/settings"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/colorButton"
                android:scaleType="fitXY"
                android:onClick="onClickSettings"
                app:srcCompat="@drawable/ic_settings_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="0.85"
            android:orientation="vertical">

            <Button
                android:id="@+id/b_meal"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="@color/colorButton"
                android:fontFamily="casual"
                android:text="@string/meal"
                android:textColor="@android:color/background_light"
                android:textSize="30sp"
                android:onClick="onClickMeal"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpace"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/b_stats"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="@color/colorBackground"
                android:fontFamily="casual"
                android:text="@string/history"
                android:textColor="@android:color/background_light"
                android:textSize="36sp"
                android:onClick="onClickHistory"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorSpace"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/b_settings"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:backgroundTint="@color/colorButton"
                android:fontFamily="casual"
                android:text="@string/settings"
                android:textColor="@android:color/background_light"
                android:textSize="36sp"
                android:onClick="onClickSettings"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
